# -demo

./: CMakeLists.txt  FlowStone1.0.0.sln  FlowStone1.0.0.vcxproj  FlowStone1.0.0.vcxproj.filters  FlowStone100.cpp  FlowStone100.h  FlowStone100.qrc  FlowStone100.ui  FlowStone2-MainWindow.cpp  FlowStone2.sln  FlowStone2.vcxproj  FlowStone2.vcxproj.filters  main.cpp
MainWindow/: FlowStone2-MainWindow.cpp  FlowStone2-MainWindow.h
ModelHandling/: ModelHandler.cpp  ModelHandler.h  STEPControl_Reader.cpp  STEPControl_Reader.h  STLControl_Reader.cpp  STLControl_Reader.h
Resources/: FlowStone2.qrc
UI/: FlowStone-MainWindow.ui  icon.qrc  ui_FlowStone2-MainWindow.h
x64/Debug/: FlowStone1.0.0.exe.recipe  FlowStone1.0.0.ilk  FlowStone1.0.0.vcxproj.FileListAbsolute.txt  FlowStone2.exe.recipe  FlowStone2.ilk  FlowStone2.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/FlowStone1.0.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FlowStone1.0.0.lastbuildstate  FlowStone1.0.0.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/FlowStone2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FlowStone2.lastbuildstate  FlowStone2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/qt/: qtvars.xml
x64/Debug/qt/moc/: FlowStone2-MainWindow.moc  moc_FlowStone100.cpp  (+1 more)
(+10 files in other folders)
